# pgplot-autotool

./: .gitignore  Makefile.am  NEWS  configure.ac  cpgplot.pc.in  pgplot.pc.in
.github/actions/build-pgplot/: action.yml
.github/workflows/: ci.yml
cpg/: Makefile.am
drivers/: Makefile.am  cgdriv.c  figdisp_comm.c  figdisp_comm.h  gidriv.f.in  nexsup.c  pndriv.c  ppdriv.f.in  wddriv.f.in
drivers/ptk/: Makefile.am
drivers/xathena/: Makefile.am
drivers/xmotif/: Makefile.am
drivers/xtk/: Makefile.am
examples/: Makefile.am
fonts/: Makefile.am
m4/: ax_gnu_fortran_version.m4  mst_compiler.m4  mst_gnu_fortran_version.m4  mst_grep_exe_type.m4
pgdispd/: Makefile.am  figcurs.c  figcurs.h  figdisp.h  getcolors.c  getcolors.h  getdata.c  getdata.h  getvisuals.c  getvisuals.h  handlexevent.c  handlexevent.h  initlgwin.c  initlgwin.h  initlock.c  initlock.h  mainloop.c  mainloop.h  pgdisp.c  proccom.c  proccom.h  resdb.c  returnbuf.c  returnbuf.h  updatelgtitle.c  waitevent.c  waitevent.h
src/: Makefile.am  grgfil.f.in  pgbox.f
sys/: Makefile.am
