## Process this file with automake to produce Makefile.in

TESTS = pgdemo1 pgdemo2 pgdemo3 pgdemo4 pgdemo5 pgdemo6 pgdemo7	      \
pgdemo8 pgdemo9 pgdemo10 pgdemo11 pgdemo12 pgdemo13 pgdemo14 pgdemo15 \
pgdemo16 pgdemo17

TESTS_ENVIRONMENT= 						\
	export PGPLOT_FONT=$(top_builddir)/fonts/grfont.dat;	\
	export PGPLOT_RGB=$(top_srcdir)/rgb.txt ;

check_PROGRAMS = pgdemo1 pgdemo2 pgdemo3 pgdemo4 pgdemo5 pgdemo6     \
pgdemo7 pgdemo8 pgdemo9 pgdemo10 pgdemo11 pgdemo12 pgdemo13 pgdemo14 \
pgdemo15 pgdemo16 pgdemo17

pgdemo1_SOURCES = pgdemo1.f
pgdemo1_LDADD = ../libpgplot.la
pgdemo2_SOURCES = pgdemo2.f
pgdemo2_LDADD = ../libpgplot.la
pgdemo3_SOURCES = pgdemo3.f
pgdemo3_LDADD = ../libpgplot.la
pgdemo4_SOURCES = pgdemo4.f
pgdemo4_LDADD = ../libpgplot.la
pgdemo5_SOURCES = pgdemo5.f
pgdemo5_LDADD = ../libpgplot.la
pgdemo6_SOURCES = pgdemo6.f
pgdemo6_LDADD = ../libpgplot.la
pgdemo7_SOURCES = pgdemo7.f
pgdemo7_LDADD = ../libpgplot.la
pgdemo8_SOURCES = pgdemo8.f
pgdemo8_LDADD = ../libpgplot.la
pgdemo9_SOURCES = pgdemo9.f
pgdemo9_LDADD = ../libpgplot.la
pgdemo10_SOURCES = pgdemo10.f
pgdemo10_LDADD = ../libpgplot.la
pgdemo11_SOURCES = pgdemo11.f
pgdemo11_LDADD = ../libpgplot.la
pgdemo12_SOURCES = pgdemo12.f
pgdemo12_LDADD = ../libpgplot.la
pgdemo13_SOURCES = pgdemo13.f
pgdemo13_LDADD = ../libpgplot.la
pgdemo14_SOURCES = pgdemo14.f
pgdemo14_LDADD = ../libpgplot.la
pgdemo15_SOURCES = pgdemo15.f
pgdemo15_LDADD = ../libpgplot.la
pgdemo16_SOURCES = pgdemo16.f
pgdemo16_LDADD = ../libpgplot.la
pgdemo17_SOURCES = pgdemo17.f
pgdemo17_LDADD = ../libpgplot.la
